--- a/package.json
+++ b/package.json
@@ -8,5 +8,22 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@zeit/next-typescript": "^1.1.1",
+    "next": "^7.0.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
+  },
+  "devDependencies": {
+    "@types/next": "^7.0.1",
+    "@types/node": "^10.11.7",
+    "@types/react": "^16.4.16",
+    "fork-ts-checker-webpack-plugin": "^0.4.10",
+    "prettier": "^1.14.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-plugin-prettier": "^2.0.0",
+    "typescript": "^3.1.2"
+  }
 }
